CORE-536 URISyntaxException if changelog path contains spaces.
Also upgrade to intellij 9 support

git-svn-id: http://liquibase.jira.com/svn/CORE/trunk@1263 e6edf6fb-f266-4316-afb4-e53d95876a76